fixed header from being stuck on top

--- a/assets/css/medium.css
+++ b/assets/css/medium.css
@@ -1,4 +1,13 @@
 @media only screen and (min-width: 32.5em) {
+    
+    main, nav, header, footer {
+        max-width: 60rem;
+        margin: auto;
+    }
+
+    header {
+        margin-top: 2%;
+    }
     #matthew {
         float: right;
         box-shadow: 4px 8px 20px rgba(0,0,0,1);
